--- a/index.html
+++ b/index.html
@@ -51,7 +51,19 @@
             eleifend ex non, vehicula libero. Suspendisse eget tellus lectus.</p>
         <div class="hero-buttons">
             <button class="btn-primary">Get Started</button>
-            <button class="btn-secondary"><img src="assert/img/play.png" class="btn-secondary-icon" alt="значок видео">Watch
+            <button class="btn-secondary">
+                <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56" fill="none">
+                    <g clip-path="url(#clip0_893_173)">
+                        <path d="M28.0001 51.3333C15.1131 51.3333 4.66675 40.887 4.66675 28C4.66675 15.113 15.1131 4.66663 28.0001 4.66663C40.8871 4.66663 51.3334 15.113 51.3334 28C51.3334 40.887 40.8871 51.3333 28.0001 51.3333ZM28.0001 46.6666C32.9508 46.6666 37.6987 44.7 41.1994 41.1993C44.7001 37.6986 46.6668 32.9507 46.6668 28C46.6668 23.0493 44.7001 18.3013 41.1994 14.8006C37.6987 11.3 32.9508 9.33329 28.0001 9.33329C23.0494 9.33329 18.3014 11.3 14.8008 14.8006C11.3001 18.3013 9.33342 23.0493 9.33342 28C9.33342 32.9507 11.3001 37.6986 14.8008 41.1993C18.3014 44.7 23.0494 46.6666 28.0001 46.6666ZM24.7847 19.635L36.1691 27.223C36.2971 27.3082 36.4021 27.4237 36.4747 27.5592C36.5473 27.6948 36.5853 27.8462 36.5853 28C36.5853 28.1537 36.5473 28.3051 36.4747 28.4407C36.4021 28.5763 36.2971 28.6918 36.1691 28.777L24.7824 36.365C24.642 36.458 24.479 36.5114 24.3108 36.5193C24.1425 36.5273 23.9753 36.4895 23.8267 36.4101C23.6782 36.3307 23.5539 36.2126 23.467 36.0682C23.3802 35.9239 23.334 35.7587 23.3334 35.5903V20.4096C23.3337 20.2408 23.3798 20.0752 23.4668 19.9305C23.5538 19.7859 23.6783 19.6675 23.8273 19.588C23.9762 19.5085 24.1439 19.4709 24.3125 19.4791C24.4811 19.4874 24.6443 19.5413 24.7847 19.635Z"
+                              fill="white"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_893_173">
+                            <rect width="56" height="56" fill="white"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+                Watch
                 Video
             </button>
         </div>
@@ -299,22 +311,114 @@
 
     <section class="testimonials">
         <p class="testimonials-title">Testimonials</p>
-        <div class="testimonial card">
-            <p class="testimonial-text">"Lorem ipsum is simply dummy text of the printing and typesetting industry.
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s."</p>
-            <div class="testimonial-author">
-                <img src="" alt="Johnny Doe" class="author-img">
-                <p class="author-name">Johnny Doe</p>
-                <a href="" class="author-link">ipsum.com</a>
-            </div>
-            <!--web components-->
+        <div class="testimonials-list">
+            <widget-testimonials
+                    img="./assert/img/Avatar2-tesitmonails.svg"
+                    logo="Ellie James"
+                    text="lorem.com"
+                    opacity="0.3"
+            >
+
+            </widget-testimonials>
+            <widget-testimonials
+                    img="./assert/img/Avatar1-tesitmonails.svg"
+                    logo="Johnny Doe"
+                    text="ipsum.com"
+                    opacity="1"
+            >
+
+            </widget-testimonials>
+            <widget-testimonials
+                    img="./assert/img/Avatar3-tesitmonails.svg"
+                    logo="Myne Barack"
+                    text="ipsum.com"
+                    opacity="0.3"
+            >
+
+            </widget-testimonials>
         </div>
     </section>
 
     <section class="best-shots">
-        <p class="best-shots-title">See our Best Shots</p>
+        <div class="best-shots-content">
+            <p class="best-shots-title">See our Best Shots</p>
+        </div>
+        <div class="best-shots-slider">
+            <button class="btn-best-shots1">
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+                    <g clip-path="url(#clip0_893_468)">
+                        <path d="M18.4862 17.1553L11.5562 10.2253L13.5358 8.24574L22.4454 17.1553L13.5358 26.0649L11.5562 24.0853L18.4862 17.1553Z"
+                              fill="#222222"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_893_468">
+                            <rect width="33.6" height="33.6" fill="white" transform="translate(0.200195 0.200195)"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+            </button>
+            <button class="btn-best-shots2">
+
+                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
+                    <g clip-path="url(#clip0_893_471)">
+                        <path d="M15.5148 17.1557L22.4448 24.0857L20.4652 26.0653L11.5556 17.1557L20.4652 8.24609L22.4448 10.2257L15.5148 17.1557Z"
+                              fill="#222222"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_893_471">
+                            <rect width="33.6" height="33.6" fill="white" transform="translate(0.199951 0.200195)"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+            </button>
+        </div>
         <div class="best-shots-gallery">
-            <!--web components-->
+            <widget-bestshots
+                    img="./assert/img/bestshots-img1.png"
+                    logo="Lorem Ipsum Amet"
+                    like="412"
+                    comment="140"
+                    opacity="0.3"
+                    hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
+            >
+            </widget-bestshots>
+            <widget-bestshots
+                    img="./assert/img/bestshots-img2.png"
+                    logo="Lorem Ipsum Amet"
+                    like="24"
+                    comment="140"
+                    opacity="1"
+                    hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
+            >
+            </widget-bestshots>
+            <widget-bestshots
+                    img="./assert/img/bestshots-img3.png"
+                    logo="Lorem Ipsum Amet"
+                    like="412"
+                    comment="140"
+                    opacity="1"
+                    hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
+            >
+            </widget-bestshots>
+            <widget-bestshots
+                    img="./assert/img/bestshots-img4.png"
+                    logo="Lorem Ipsum Amet"
+                    like="412"
+                    comment="140"
+                    opacity="1"
+                    hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
+            >
+            </widget-bestshots>
+            <widget-bestshots
+                    img="./assert/img/bestshots-img5.png"
+                    logo="Lorem Ipsum Amet"
+                    like="412"
+                    comment="140"
+                    opacity="0.3"
+                    hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
+            >
+            </widget-bestshots>
+
         </div>
     </section>
 
@@ -322,9 +426,48 @@
         <div class="contact-info">
             <p class="contact-info-title">Contact us</p>
             <p class="contact-info-description">Have an inquiry? We’ll be happy to assist you</p>
-            <p class="contact-info-detail">📞 +92 333 6537566</p>
-            <p class="contact-info-detail">📧 abuzer@greeelogix.com</p>
-            <p class="contact-info-detail">📍 Plot 252, Block L Phase 2 Johar Town, Lahore, PK</p>
+            <p class="contact-info-detail">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <g clip-path="url(#clip0_896_58)">
+                        <path d="M21 16.42V19.956C21.0001 20.2092 20.9042 20.453 20.7316 20.6382C20.559 20.8234 20.3226 20.9363 20.07 20.954C19.633 20.984 19.276 21 19 21C10.163 21 3 13.837 3 5C3 4.724 3.015 4.367 3.046 3.93C3.06372 3.67744 3.17658 3.44101 3.3618 3.26841C3.54703 3.09581 3.79082 2.99989 4.044 3H7.58C7.70404 2.99987 7.8237 3.04586 7.91573 3.12902C8.00776 3.21218 8.0656 3.32658 8.078 3.45C8.101 3.68 8.122 3.863 8.142 4.002C8.34073 5.38892 8.748 6.73783 9.35 8.003C9.445 8.203 9.383 8.442 9.203 8.57L7.045 10.112C8.36445 13.1865 10.8145 15.6365 13.889 16.956L15.429 14.802C15.4919 14.714 15.5838 14.6509 15.6885 14.6237C15.7932 14.5964 15.9042 14.6068 16.002 14.653C17.267 15.2539 18.6156 15.6601 20.002 15.858C20.141 15.878 20.324 15.9 20.552 15.922C20.6752 15.9346 20.7894 15.9926 20.8724 16.0846C20.9553 16.1766 21.0012 16.2961 21.001 16.42H21Z"
+                              fill="#FFA3A3"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_896_58">
+                            <rect width="24" height="24" fill="white"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+                +92 333 6537566
+            </p>
+            <p class="contact-info-detail">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <g clip-path="url(#clip0_896_73)">
+                        <path d="M3 3H21C21.2652 3 21.5196 3.10536 21.7071 3.29289C21.8946 3.48043 22 3.73478 22 4V20C22 20.2652 21.8946 20.5196 21.7071 20.7071C21.5196 20.8946 21.2652 21 21 21H3C2.73478 21 2.48043 20.8946 2.29289 20.7071C2.10536 20.5196 2 20.2652 2 20V4C2 3.73478 2.10536 3.48043 2.29289 3.29289C2.48043 3.10536 2.73478 3 3 3ZM12.06 11.683L5.648 6.238L4.353 7.762L12.073 14.317L19.654 7.757L18.346 6.244L12.061 11.683H12.06Z"
+                              fill="#FFA3A3"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_896_73">
+                            <rect width="24" height="24" fill="white"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+                abuzer@greeelogix.com
+            </p>
+            <p class="contact-info-detail">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <g clip-path="url(#clip0_896_68)">
+                        <path d="M18.364 17.3639L12 23.7279L5.636 17.3639C4.37734 16.1052 3.52019 14.5016 3.17293 12.7558C2.82567 11.0099 3.00391 9.20035 3.6851 7.55582C4.36629 5.91129 5.51984 4.50569 6.99988 3.51677C8.47992 2.52784 10.22 2 12 2C13.78 2 15.5201 2.52784 17.0001 3.51677C18.4802 4.50569 19.6337 5.91129 20.3149 7.55582C20.9961 9.20035 21.1743 11.0099 20.8271 12.7558C20.4798 14.5016 19.6227 16.1052 18.364 17.3639ZM12 12.9999C12.5304 12.9999 13.0391 12.7892 13.4142 12.4141C13.7893 12.0391 14 11.5304 14 10.9999C14 10.4695 13.7893 9.96078 13.4142 9.58571C13.0391 9.21064 12.5304 8.99992 12 8.99992C11.4696 8.99992 10.9609 9.21064 10.5858 9.58571C10.2107 9.96078 10 10.4695 10 10.9999C10 11.5304 10.2107 12.0391 10.5858 12.4141C10.9609 12.7892 11.4696 12.9999 12 12.9999Z"
+                              fill="#FFA3A3"/>
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_896_68">
+                            <rect width="24" height="24" fill="white"/>
+                        </clipPath>
+                    </defs>
+                </svg>
+                Plot 252, Block L Phase 2 Johar Town, Lahore, PK
+            </p>
         </div>
         <div class="contact-form">
             <p class="contact-form-title">Fill in your details</p>
@@ -406,5 +549,7 @@
 
 <script src="assert/js/component-categories.js"></script>
 <script src="assert/js/component-sell.js"></script>
+<script src="assert/js/component-testimonials.js"></script>
+<script src="assert/js/component-bestshots.js"></script>
 </body>
 </html>
