--- a/index.html
+++ b/index.html
@@ -13,33 +13,34 @@
 
 
 <header class="header">
-    <img src="./assert/img/Logo.svg" alt="лого" class="logo">
-    <nav class="navbar">
-        <ol class="nav-list">
-            <li><a href="#" class="nav-link">Home</a></li>
-            <li>
-                <a href="#" class="nav-link">Speakers
-                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
-                        <path d="M7.76375 1.65551C8.07875 1.99628 8.07875 2.54888 7.76375 2.88965L4.5704 6.34429C4.25537 6.68511 3.74464 6.68511 3.42961 6.34429L0.236259 2.88974C0.0790314 2.71951 -4.78938e-08 2.49558 -3.81498e-08 2.27267C-2.84075e-08 2.04979 0.0789151 1.82588 0.236212 1.65565C0.551248 1.31483 1.06201 1.31479 1.37705 1.6556L3.19335 3.62045L4 4.51597L4.80666 3.62043L6.62296 1.65551C6.938 1.3147 7.44872 1.3147 7.76375 1.65551Z"
-                              fill="white"/>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="nav-link">Schedule
-                    <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
-                        <path d="M7.76375 1.65551C8.07875 1.99628 8.07875 2.54888 7.76375 2.88965L4.5704 6.34429C4.25537 6.68511 3.74464 6.68511 3.42961 6.34429L0.236259 2.88974C0.0790314 2.71951 -4.78938e-08 2.49558 -3.81498e-08 2.27267C-2.84075e-08 2.04979 0.0789151 1.82588 0.236212 1.65565C0.551248 1.31483 1.06201 1.31479 1.37705 1.6556L3.19335 3.62045L4 4.51597L4.80666 3.62043L6.62296 1.65551C6.938 1.3147 7.44872 1.3147 7.76375 1.65551Z"
-                              fill="white"/>
-                    </svg>
-                </a>
-            </li>
-            <li><a href="#" class="nav-link">Contact Us</a></li>
-            <li>
-                <button class="get-tickets">Get Tickets</button>
-            </li>
-        </ol>
-    </nav>
-
+    <div class="header-container">
+        <img src="./assert/img/Logo.svg" alt="лого" class="logo">
+        <nav class="navbar">
+            <ol class="nav-list">
+                <li><a href="#" class="nav-link">Home</a></li>
+                <li>
+                    <a href="#" class="nav-link">Speakers
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
+                            <path d="M7.76375 1.65551C8.07875 1.99628 8.07875 2.54888 7.76375 2.88965L4.5704 6.34429C4.25537 6.68511 3.74464 6.68511 3.42961 6.34429L0.236259 2.88974C0.0790314 2.71951 -4.78938e-08 2.49558 -3.81498e-08 2.27267C-2.84075e-08 2.04979 0.0789151 1.82588 0.236212 1.65565C0.551248 1.31483 1.06201 1.31479 1.37705 1.6556L3.19335 3.62045L4 4.51597L4.80666 3.62043L6.62296 1.65551C6.938 1.3147 7.44872 1.3147 7.76375 1.65551Z"
+                                  fill="white"/>
+                        </svg>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="nav-link">Schedule
+                        <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8" fill="none">
+                            <path d="M7.76375 1.65551C8.07875 1.99628 8.07875 2.54888 7.76375 2.88965L4.5704 6.34429C4.25537 6.68511 3.74464 6.68511 3.42961 6.34429L0.236259 2.88974C0.0790314 2.71951 -4.78938e-08 2.49558 -3.81498e-08 2.27267C-2.84075e-08 2.04979 0.0789151 1.82588 0.236212 1.65565C0.551248 1.31483 1.06201 1.31479 1.37705 1.6556L3.19335 3.62045L4 4.51597L4.80666 3.62043L6.62296 1.65551C6.938 1.3147 7.44872 1.3147 7.76375 1.65551Z"
+                                  fill="white"/>
+                        </svg>
+                    </a>
+                </li>
+                <li><a href="#" class="nav-link">Contact Us</a></li>
+                <li>
+                    <button class="get-tickets">Get Tickets</button>
+                </li>
+            </ol>
+        </nav>
+    </div>
 </header>
 
 
@@ -141,12 +142,11 @@
 
                 <button class="btn-about">Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                        <g clip-path="url(#clip0_6201_9)">
-                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
-                                  fill="white"/>
+                        <g clip-path="url(#clip0_6275_9)">
+                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z" fill="white"/>
                         </g>
                         <defs>
-                            <clipPath id="clip0_6201_9">
+                            <clipPath id="clip0_6275_9">
                                 <rect width="24" height="24" fill="white"/>
                             </clipPath>
                         </defs>
@@ -169,7 +169,18 @@
                         non massa mattis iaculis. In quis massa risus
                     </p>
                 </div>
-                <button class="btn-singer">View All Singers</button>
+                <button class="btn-singer">View All Singers
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <g clip-path="url(#clip0_6275_9)">
+                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z" fill="white"/>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0_6275_9">
+                                <rect width="24" height="24" fill="white"/>
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </button>
             </div>
 
             <div class="singer-images">
@@ -467,7 +478,7 @@
             <widget-bestshots
                     img="./assert/img/bestshots-img2.png"
                     logo="Lorem Ipsum Amet"
-                    like="24"
+                    like="412"
                     comment="140"
                     opacity="1"
                     hashtag="#music #concert #conference #london #event #artist #dj #soundtrack #dance"
@@ -520,7 +531,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                +92 333 6537566
+                +92 333 6527366
             </p>
             <p class="contact-info-detail">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
@@ -534,7 +545,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                abuzer@greeelogix.com
+                abuzer@greelogix.com
             </p>
             <p class="contact-info-detail">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
