`feat: mobile and tablet versions have been made, and the desktop has been changed`

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musik Event</title>
     <link rel="stylesheet" href="./assert/css/style.css">
+    <link rel="stylesheet" href="./assert/css/styletablet.css">
+    <link rel="stylesheet" href="./assert/css/stylemobile.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
 
@@ -15,6 +17,12 @@
 <header class="header">
     <div class="header-container">
         <img src="./assert/img/Logo.svg" alt="лого" class="logo">
+        <input type="checkbox" id="burger-toggle" class="burger-checkbox">
+        <label for="burger-toggle" class="burger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <nav class="navbar">
             <ol class="nav-list">
                 <li><a href="#" class="nav-link">Home</a></li>
@@ -143,7 +151,8 @@
                 <button class="btn-about">Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <g clip-path="url(#clip0_6275_9)">
-                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z" fill="white"/>
+                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                                  fill="white"/>
                         </g>
                         <defs>
                             <clipPath id="clip0_6275_9">
@@ -172,7 +181,8 @@
                 <button class="btn-singer">View All Singers
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <g clip-path="url(#clip0_6275_9)">
-                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z" fill="white"/>
+                            <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
+                                  fill="white"/>
                         </g>
                         <defs>
                             <clipPath id="clip0_6275_9">
