`feat: extended functional catalog and add a new page`

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         non massa mattis iaculis. In quis massa risus</p>
                 </div>
 
-                <button class="btn-about">Learn More
+                <button class="btn-about" onclick="window.location.href='http://localhost:63342/untitled3/university/cotalog.html';">Learn More
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                         <g clip-path="url(#clip0_6275_9)">
                             <path d="M16.172 11L10.808 5.63598L12.222 4.22198L20 12L12.222 19.778L10.808 18.364L16.172 13H4V11H16.172Z"
